cluster/flux-system/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-grafana
  namespace: flux-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/auth-url: "https://gate.sko.ai/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://gate.sko.ai"
spec:
  rules:
  - host: fg.sko.ai
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - fg.sko.ai
    secretName: ingress-cert-flux-grafana
